--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<h1>Ejemplo de una Web API</h1>
     	<h2>Gerardo Navarro - NG20002</h3>
 		<h3>Integrante del grupo #04 de la asignatura de TPI</h3>
+		<h3> Guia 61B </h3>
 	</div>
  	
 	 <div id = "container-btnProductos"><button id = "btnProductos" onclick="obtenerProductos();this.style.display='none';">Obtener Productos</button></div>
